Add jrebel support